--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
     </div>
 
     
-    
+
   <footer>
     <div class="footer-content">
-      <p class = "contact">Contact: BundeeBoodee@gmail.com</p>
+      <p class = "contact">Contact: Bgaussaint@gmail.com</p>
       <div class = "socials">
         <a href = "https://www.linkedin.com/in/bettino-gaussaint/"><img src = "images/linkedin_logo.png"></a>
         <a href = "https://github.com/bgaussaint"><img src = "images/github_logo.png"></a>
